# segmentation-module

./: .catkinignore  .gitignore  README.md  VALID_ERROR.md
convert_torchscript_tutorial/: CMakeLists.txt  README.md  convert_torchscript.py  load_module.cpp
deeplabv3_apples/: engine.py  export.py  model.py  predict.py  system_check.py  train_deeplabv3.py  utils.py  validate.py
deeplabv3_apples/config/: config.py  train_config.yaml
deeplabv3_apples/data/: data_splitting.py  dataloader.py  dataset_splits_with_synth.csv  image_preprocessing.py  visualise_dataset.py
deeplabv3_apples/debug/: display.py  visualise_dataloader.py
docker/: Dockerfile  docker-compose.yaml
model/: dataloader.py
model/data/: .~lock.dataset_splits.csv#  data_splitting.py  dataloader.py  dataset_splits.csv
model/debug/: visualise_dataloader.py
model_inference/: CMakeLists.txt  package.xml
model_inference/include/model_inference/: model_inference.hpp  predict.hpp
model_inference/src/: model_inference.cpp  predict.cpp  predict_demo.cpp  predict_main.cpp
model_inference_cpp/: CMakeLists.txt  package.xml
model_inference_cpp/cmake/: model_inferenceConfig.cmake  model_inferenceConfig.cmake.in
model_inference_cpp/include/model_inference_cpp/: model_inference.hpp
model_inference_cpp/scratch/: CMakeLists_non_catkin.txt
model_inference_cpp/src/: model_inference.cpp
pointcloud_filter/: CMakeLists.txt  nodelet_plugins.xml  package.xml
pointcloud_filter/config/: pointcloud_filter.yaml
pointcloud_filter/include/pointcloud_filter/: pointcloud_filter_core.hpp
pointcloud_filter/launch/: pointcloud_filter.launch  pointcloud_filter_nodelet.launch
pointcloud_filter/scripts/: apple_segmentation_node.py
pointcloud_filter/src/: pointcloud_filter_core.cpp  pointcloud_filter_main.cpp
pointcloud_filter_node/: CMakeLists.txt  package.xml
pointcloud_filter_node/config/: pointcloud_filter_node.yaml
pointcloud_filter_node/include/pointcloud_filter_node/: pointcloud_filter_core.hpp
pointcloud_filter_node/launch/: pointcloud_filter.launch
pointcloud_filter_node/src/: pointcloud_filter_core.cpp  pointcloud_filter_main.cpp
segmentation_module/: CMakeLists.txt  package.xml
segmentation_module_ros/: CMakeLists.txt  package.xml
segmentation_module_ros/include/: segmentation_module_node.hpp
segmentation_module_ros_node/: CMakeLists.txt  package.xml
segmentation_module_ros_node/include/: apple_segmentation_node.hpp
segmentation_module_ros_node/scripts/: segmentation_module_ros_node.py
segmentation_module_ros_node/src/: apple_segmentation_node.cpp
semantic_segmentation/: model.py  predict_demo.py  train_deeplabv3.py  utils.py  validate.py
semantic_segmentation/config/: config.py  train_config.yaml
semantic_segmentation/data/: .~lock.dataset_splits.csv#  __init__.py  data_splitting.py  dataloader.py
semantic_segmentation/debug/: visualise_dataloader.py
semantic_segmentation/output/2024_10_01_17_47_41/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_17_48_32/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_17_48_57/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_17_52_55/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_17_53_39/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_17_54_11/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_17_56_13/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_17_59_24/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_06_04/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_07_25/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_12_17/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_21_24/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_28_36/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_30_14/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_32_05/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_32_39/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_01_18_32_59/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_39_37/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_42_24/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_44_45/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_45_52/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_47_50/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_49_05/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_50_34/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_52_22/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_54_40/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_11_58_21/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_12_01_09/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_12_03_22/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_12_07_10/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_13_57_35/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_14_06_15/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_14_08_54/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_14_10_04/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_14_10_53/: config_used.yaml  training_log.txt
semantic_segmentation/output/2024_10_02_14_12_07/: config_used.yaml  training_log.txt
(+22 files in other folders)
