<?xml version="1.0"?>
<package format="2">
  <name>model_inference_cpp</name>
  <version>0.1.0</version>
  <description>C++ inference library for segmentation model</description>
  <maintainer email="quanvu0604@gmail.com">Minh Quan Vu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>Torch</build_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>Torch</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
